# shadertrans

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/shadertrans/: CompilerDX.h  ConfigGLSL.h  GLSLangAdapter.h  ShaderBuilder.h  ShaderInfo.h  ShaderLink.h  ShaderParser.h  ShaderPreprocess.h  ShaderReflection.h  ShaderRename.h  ShaderStage.h  ShaderTrans.h  ShaderValidator.h  SpirvGenTwo.h  SpirvTools.h  spirv_IR.h  spirv_Linker.h  spirv_Parser.h
platform/msvc/: .gitignore
platform/msvc/projects/: shadertrans.vcxproj  shadertrans.vcxproj.filters  shadertrans_new.vcxproj  shadertrans_new.vcxproj.filters
source/: CompilerDX.cpp  GLSLangAdapter.cpp  ShaderBuilder.cpp  ShaderInfo.cpp  ShaderLink.cpp  ShaderParser.cpp  ShaderPreprocess.cpp  ShaderReflection.cpp  ShaderRename.cpp  ShaderTrans.cpp  ShaderValidator.cpp  SpirvGenTwo.cpp  SpirvTools.cpp  spirv_IR.cpp  spirv_Linker.cpp  spirv_Parser.cpp
